# arubacentralwebhooks

./: .gitignore  README.md  pyproject.toml
2.5.4/: .gitignore  AP-AP_CPU_Over_Utilization.json  AP-AP_Connected_Clients.json  AP-AP_Disconnected.json  AP-AP_Memory_Over_Utilization.json  AP-AP_Radio_Noise_Floor.json  AP-AP_Radio_Non_Wifi_Over_Utilization.json  AP-AP_Radio_Over_Utilization.json  AP-AP_Tunnel_Down.json  AP-AP_With_Missing_Radios.json  AP-Client_Attack_detected.json  AP-Connected_Clients.json  AP-IAP_Firmware_Upgrade_Failed.json  AP-Infrastructure_Attack_Detected.json  AP-Insufficient_Power_Alert.json  AP-Modem_Plugged.json  AP-Modem_Unplugged.json  AP-New_AP_Detected.json  AP-New_Virtual_Controller_Detected.json  AP-Radio_Frames_Retry_Percent_.json  AP-Rogue_AP_Detected.json  AP-Uplink_Changed.json  AP-Virtual_Controller_Disconnected.json  GATEWAY-All_IPSec_SAs_Down.json  GATEWAY-BGP_Neighbor_Route_Limit.json  GATEWAY-BGP_Session_Error.json  GATEWAY-CFG-SET_Advertisement_Failure.json  GATEWAY-DHCP_Pool_Consumption_Alert.json  GATEWAY-GW_Cluster_VLAN_Mismatch.json  GATEWAY-Gateway_Base_License_Capacity_Limit_Exceeded.json  GATEWAY-Gateway_CPU_Utilization.json  GATEWAY-Gateway_Cellular_Data_Usage.json  GATEWAY-Gateway_Cluster_Leader_Change.json  GATEWAY-Gateway_Disconnected.json  GATEWAY-Gateway_Emergency_Mode.json  GATEWAY-Gateway_Firmware_Upgrade_Failed.json  GATEWAY-Gateway_IDS_IPS_Engine_CPU_Utilization.json  GATEWAY-Gateway_IDS_IPS_Engine_Error_State.json  GATEWAY-Gateway_IDS_IPS_Engine_Packet_Dropped_Detected.json  GATEWAY-Gateway_Joining_Cluster.json  (+40 more)
(+1 files in other folders)
