[tool.poetry]
name = "arubacentralwebhooks"
version = "0.1.0"
description = ""
authors = ["Michael Rose <michael@michaelrosejr.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
rich = "^10.12.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
